hey ant algorithm is for finding short trails in a very special scenario and we use it as a global search algorithm.

--- a/doc/meta/_Header.tex
+++ b/doc/meta/_Header.tex
@@ -6,7 +6,7 @@
 % Do not put math or special symbols in the title.
 
 
-\title{Lightweight Ant Algorithm with Ant Mill Protection}
+\title{Lightweight Pheromone based search algorithm with Ant Mill protection}
 
 
 % author names and affiliations
