--- a/doc/meta/_Abstract.tex
+++ b/doc/meta/_Abstract.tex
@@ -3,8 +3,9 @@
 \begin{abstract}
 The technological development is often motivated by nature concepts.
 For example molecular machines with a minimal logic acting like complex biological
-proteins. We are thinking ahead: these molecular machines will work as a robot
-swarm in the future. Therefore we need a simple logic for each machine.
+proteins. We are thinking ahead: these molecular machines should work as a robot
+swarm in the future. Therefore we need a simple logic for each machine without
+traditionally wireless network communication.
 We concentrated on the ant algorithm to find and collect food. This algorithm use
 pheromones and the environment to control and communicate to each machine (ant).
 We found out, that simulating a simple implementation of this algorithm leads
@@ -17,5 +18,5 @@ nature and other ant algorithm simulations.
 
 % use the taxonomy data of IEEE for the keywords
 \begin{IEEEkeywords}
-multi-robot systems, simulation, pheromones, insects
+multi-robot systems, simulation, pheromones, insects, molecular machines
 \end{IEEEkeywords}
