--- a/doc/meta/content.tex
+++ b/doc/meta/content.tex
@@ -153,6 +153,10 @@ parts:
   30 robot objects (each with our ant algorithm)
 \end{itemize}
 
+Additionally to the normal values we need in the simulation, we logged
+the \emph{mean of the ant age} and the \emph{last 10 steps before
+dying}.
+
 In this chapter we explain each part and who we initialized it with
 fixed values. The last chapter is about our ant algorithm and the
 traffic jam control to prevent ant mills.
@@ -242,6 +246,24 @@ The Simulator loads the world with it special seed and iterated \(1000\)
 times through \(30\) ants. Thus a single ant is being \(wakeup()\) for
 \(1000\) times to walk, detect, collect or setting/changing a pheromone
 tile.
+
+\subsubsection{Ant age \& last steps}\label{ant-age-last-steps}
+
+In order to be able to establish a statement about the success of all
+simulated worlds with variation of selected parameters, we decided to
+log the mean of the ant age after each simulation iteration. To detect a
+bad behavior like ant mills and high frequented routes to empty food
+areas we logged the last 10 steps of the ant before its death. Counting
+the revisited locations and measure the running distance let us
+understand, what happened to the ant (running in circles or continuous
+forward).
+
+The age of an ant is the number of ``wakeups'' from the simulator.
+Normally an ant will die without food after \(50\) wakeups. If an ant
+finds 1 nutritive, it sets its \emph{hunger level back to zero} and the
+ant lives longer. Thus a high average value of the ant age is a good
+indicator, that the ant colony finds continuously food and is not
+running in circles all the time or being on a dreadful track.
 
 \subsection{Traffic jam controlled
 algorithm}\label{traffic-jam-controlled-algorithm}
@@ -391,8 +413,6 @@ Ant is not in \emph{homing} mode:
 
 Our random orientation is modified a bit to permit running backwards.
 Only running forward, left or right is allowed.
-
-\subsection{Aging}\label{aging}
 
 \section{Results}\label{results}
 
